--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
         "import/no-unresolved": "off",
         "import/extensions": "off",
         "no-console":"off",
+        "no-else-return":"off",
         "linebreak-style":"off",
-        "class-methods-use-this": 0
+        "class-methods-use-this":"off"
     }
 }
