Create update order API endpoint
Create route and controller to update specific order via orderId parameter

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
         "no-console":"off",
         "no-else-return":"off",
         "linebreak-style":"off",
-        "class-methods-use-this":"off"
+        "class-methods-use-this":"off",
+        "array-callback-return":"off"
     }
 }
