Create test suite for API endpoints
Create API endpoints test suite using mocha, chai and supertest

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,12 +6,13 @@
     "extends": "airbnb",
     "parser": "babel-eslint",
     "rules": {
+        "array-callback-return":"off",
+        "class-methods-use-this":"off",
         "import/no-unresolved": "off",
         "import/extensions": "off",
+        "linebreak-style":"off",
         "no-console":"off",
         "no-else-return":"off",
-        "linebreak-style":"off",
-        "class-methods-use-this":"off",
-        "array-callback-return":"off"
+        "no-undef": "off"
     }
 }
