--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^9.0.0",
     "babel-preset-env": "^1.7.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
