--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ script:
   
 after_success:
 - npm run coveralls
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
