--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
         "linebreak-style": "off",
         "no-console":"off",
         "no-else-return":"off",
-        "no-undef": "off"
+        "no-undef": "off",
+        "prefer-destructuring":"off"
     }
 }
