--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "fast-food-fast",
   "version": "1.0.0",
   "description": "A food delivery service application for a restaurant, to enable a restaurant manage customer orders better and deliver fast food items to customers in a 'Split Second",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "babel src -d lib",
-    "start": "nodemon app.js --exec babel-node --",
-    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./test/test.js",
+    "start": "nodemon ./app/app.js --exec babel-node --",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./app/tests/test.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./test/test.js --timeout 10000 --exit"
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./app/tests/test.js --timeout 10000 --exit"
   },
 
   "engines":{
@@ -20,6 +20,7 @@
     "type": "git",
     "url": "git+https://github.com/oluwajuwon/Fast-Food-Fast.git"
   },
+
   "keywords": [
     "order",
     "food",
@@ -35,7 +36,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "supertest": "^3.2.0"
   },
 
 
@@ -55,7 +57,6 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
-    "nyc": "^13.0.1",
-    "supertest": "^3.2.0"
+    "nyc": "^13.0.1"
   }
 }
