--- a/package.json
+++ b/package.json
@@ -6,21 +6,18 @@
   "scripts": {
     "build": "babel src -d lib",
     "start": "nodemon ./app/app.js --exec babel-node --",
-    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./app/tests/test.js",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./app/tests/**/*.test.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./app/tests/test.js --timeout 10000 --exit"
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./app/tests/**/*.test.js --timeout 10000 --exit"
   },
-
-  "engines":{
+  "engines": {
     "node": "8.9.3",
     "npm": "5.5.1"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oluwajuwon/Fast-Food-Fast.git"
   },
-
   "keywords": [
     "order",
     "food",
@@ -37,10 +34,9 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "express": "^4.16.3",
+    "moment": "^2.22.2",
     "supertest": "^3.2.0"
   },
-
-
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -53,6 +49,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "express-validator": "^5.3.0",
+    "faker": "^4.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
