--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "chai": "^4.1.2",
     "express": "^4.16.3",
     "moment": "^2.22.2",
-    "supertest": "^3.2.0"
+    "supertest": "^3.2.0",
+    "express-validator": "^5.3.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -49,7 +50,6 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "express-validator": "^5.3.0",
     "faker": "^4.1.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.2.0",
