--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
         "no-console":"off",
         "no-else-return":"off",
         "no-undef": "off",
+        "no-empty": "off",
         "prefer-destructuring":"off"
     }
 }
