--- a/package.json
+++ b/package.json
@@ -10,17 +10,14 @@
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./app/tests/**/*.test.js --timeout 10000 --exit"
   },
-
-  "engines":{
+  "engines": {
     "node": "8.9.3",
     "npm": "5.5.1"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/oluwajuwon/Fast-Food-Fast.git"
   },
-
   "keywords": [
     "order",
     "food",
@@ -36,11 +33,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "pg": "^7.4.3",
     "supertest": "^3.2.0"
   },
-
-
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
