Integrate postgresql database with app - Create test suite to test endpoints and database - Add new features for menu endpoints

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "no-else-return":"off",
         "no-undef": "off",
         "no-empty": "off",
-        "prefer-destructuring":"off"
+        "prefer-destructuring":"off",
+        "no-loop-func" :"off"
     }
 }
