Create loading effect for frontend Add loading effects for better user experience Refactor codebase for ordering food items Abstract validations from order food controller

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/oluwajuwon/Fast-Food-Fast#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "cors": "^2.8.4",
