--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "A food delivery service application for a restaurant, to enable a restaurant manage customer orders better and deliver fast food items to customers in a 'Split Second",
   "main": "app.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "migrate": "npx babel-node ./app/migrate.js ",
-    "pretest": "npx babel-node ./app/migrate.js ",
-    "start": "npm run migrate && nodemon ./app/app.js --exec babel-node --",
-    "start-prod": "nodemon ./app/app.js --exec babel-node --",
-    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:babel-core/register ./app/tests/**/*.test.js",
+    "pre-build": "webpack --mode production",
+    "build": "npm run pre-build babel-node src -d lib",
+    "build-client": "webpack --config ./webpack.config.dev.js --mode development",
+    "migrate": "babel-node ./app/migrate.js ",
+    "pretest": "babel-node ./app/migrate.js ",
+    "start-client": "webpack-dev-server --config ./webpack.config.dev.js --mode development",
+    "start-dev": "npm run migrate && nodemon ./app/app.js --exec babel-node --",
+    "start-prod": "webpack --config ./webpack.config.prod.js --mode production && nodemon ./app/app.js --exec babel-node --",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:@babel/register ./app/tests/**/*.test.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./app/tests/**/*.test.js --timeout 10000 --exit"
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --compilers js:@babel/register ./app/tests/**/*.test.js --timeout 10000 --exit"
   },
   "engines": {
     "node": "8.9.3",
@@ -43,13 +46,23 @@
     "express-validator": "^5.3.0",
     "jsonwebtoken": "^8.3.0",
     "pg": "^7.4.3",
-    "supertest": "^3.2.0"
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "save-dev": "^2.0.0",
+    "supertest": "^3.2.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
     "babel-eslint": "^9.0.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-loader": "^8.0.5",
+    "babel-polyfill": "^6.26.0",
     "coveralls": "^3.0.2",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -61,6 +74,8 @@
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.18.4",
-    "nyc": "^13.0.1"
+    "nyc": "^13.0.1",
+    "webpack": "^4.28.3",
+    "webpack-cli": "^3.1.2"
   }
 }
