[Chore #163012365] Setup frontend testing
 - Setup jest testing framework
 - Setup Enzyme testing utility
 - Write basic passing test
 - Modify configuration for server test

[Finishes #163012365]

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ addons:
         secure: "9894e7b58a743078c9316e16e3456ba1565a8a054eae857c03150a0d7d3aca31"
 
 script:
-  - npm run test
+  - npm run test:server
+  - npm run test:client
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
