--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,9 @@
 {
     "env": {
     "node": true,
-    "es6": true
+    "es6": true,
+    "browser": true,
+    "jest": true
     },
     "extends": "airbnb",
     "parser": "babel-eslint",
@@ -13,9 +15,10 @@
         "linebreak-style": "off",
         "no-console":"off",
         "no-else-return":"off",
-        "no-undef": "off",
+        "no-undef": 1,
         "no-empty": "off",
         "prefer-destructuring":"off",
-        "no-loop-func" :"off"
+        "no-loop-func" :"off",
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
