[Chore #163072361] Setup redux and routing
 - Install redux dependencies for app
 - Install react routing dependencies
 - Create basic routes
 - Modify travis yml file
 - Integrate codecov to get coverage reports for backend and frontend

[Finishes #163072361]

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,18 @@ script:
   - npm run test:server
   - npm run test:client
 
+before_install:
+  - psql -c 'create database fastfoodfast;' -U postgres
+
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - npm install -g codecov
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 after_success:
   - npm run coveralls
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - npm run codecov
 
 
