[Feat #163442164] Users should be able to delete their order(s)
 - Write test for users to delete orders
 - Create controller for users to delete their orders
 - Add route for deleting an order
 - Add middleware to check the user deleting the order

[Finishes #163442164]

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "migrate": "babel-node ./app/migrate.js ",
     "start-client": "webpack-dev-server --config ./webpack.config.dev.js --mode development",
     "start-dev": "npm run migrate && nodemon ./app/app.js --exec babel-node --",
-    "start-prod": "webpack --config ./webpack.config.prod.js --mode production && nodemon ./app/app.js --exec babel-node --",
+    "start-prod": "./app/app.js --exec babel-node --",
     "cover": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec --compilers js:@babel/register ./app/tests/**/*.test.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "pretest": "babel-node ./app/migrate.js ",
@@ -84,6 +84,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
